--- a/main.css
+++ b/main.css
@@ -2,17 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: crimson;
+    background-color: rgb(56, 54, 55);
+    font-family: 'Righteous', cursive;
 }
 
 section{
     height: 100vh;
     min-width: none;
-    font-family: sans-serif;
 }
 
 .score{
-    color:whitesmoke;
+    color:crimson;
     height: 20vh;
     display: flex;
     justify-content: space-around;
@@ -21,6 +21,10 @@ section{
 
 .score h2{
     font-size: 30px;
+}
+
+.score .player-score{
+    color: green;
 }
 
 .score p{
@@ -49,14 +53,26 @@ section{
     color: gold;
 }
 
-.intro button,
-.options button{
+.intro button{
     background: none;
     border: none;
     background-color: black;
     height: 50px;
     width: 150px;
     color: gold;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.options button{
+    background: none;
+    border: none;
+    background-color: black;
+    height: 50px;
+    width: 150px;
+    color: crimson;
     font-size: 20px;
     font-weight: bold;
     border-radius: 5px;
@@ -72,13 +88,14 @@ section{
 }
 
 .winner{
-    color: white;
+    color: crimson;
     text-align: center;
     font-size: 50px;
 }
 
 .hands,
 .options{
+    padding-top: 16%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -104,7 +121,7 @@ div.fadeIn{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, .40);
+    background-color: rgba(141, 138, 138, 0.4);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,6 +152,7 @@ body.overlay-is-open .main {
     font-size: 30px;
     font-weight: bold;
     margin: auto auto;
+    color: crimson;
 }
 
 .reset-button {
@@ -142,7 +160,7 @@ body.overlay-is-open .main {
     font-weight: bold;
     background-color: gold;
     border: none;
-    color: black;
+    color: crimson;
     border-radius: 7px;
     padding: 12px 20px;
     display: inline-block;
@@ -151,47 +169,140 @@ body.overlay-is-open .main {
 }
   
 .reset-button:hover {
-    background-color: #00367e;
+    background-color: crimson;
 }
   
 .reset-button:focus {
-    background-color: #00275a;
+    background-color: black;
+}
+
+.intro1{
+    background:  rgb(56, 54, 55);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider{
+    background:  yellow;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%); /*da se spusti skroz dolje*/
+}
+
+.intro-text{
+    font-size: 50px;
+}
+
+.hide{
+    background: rgb(56, 54, 55);
+    overflow: hidden;
+}
+
+.hide span{
+    transform: translateY(100%);
+    display: inline-block; /*to su inline elementi pa nam ovo omogućava da pomičemo gore dolje*/
 }
 
 @media (max-width:500px) {
-    .intro h1{
+    .intro .typing{
         font-size: 30px;
         text-align: center;
+        color: yellow;
     }
 
-    .game{
-        margin-left: 10px;
+    .intro-text{
+        font-size: 30px;
     }
-
     .winner{
-        color: white;
+        color: yellow;
         text-align: center;
         font-size: 30px;
     }
     .player-hand,
     .computer-hand{
-        height: 200px;
-        width: 200px;
+        height: 150px;
+        width: 150px;
     }
-    .match > .options{
-        max-width: 300px;
-        margin-left: 50px;
-    }
+
     .options button{
         background: none;
         border: none;
         background-color: black;
         height: 50px;
         width: 90px;
-        color: gold;
+        color: crimson;
         font-size: 20px;
         font-weight: bold;
         border-radius: 5px;
         cursor: pointer;
+    }
+}
+
+@keyframes shakePlayer {
+    0% {
+        transform: rotateY(180deg) translateY(0px);
+    }
+    15% {
+        transform: rotateY(180deg) translateY(-50px);
+    }
+    25% {
+        transform: rotateY(180deg) translateY(0px);
+    }
+    35% {
+        transform: rotateY(180deg) translateY(-50px);
+    }
+    50% {
+        transform: rotateY(180deg) translateY(0px);
+    }
+    65% {
+        transform: rotateY(180deg) translateY(-50px);
+    }
+    75% {
+        transform: rotateY(180deg) translateY(0px);
+    }
+    85% {
+        transform: rotateY(180deg) translateY(-50px);
+    }
+    100% {
+        transform: rotateY(180deg) translateY(0px);
+    }
+}
+
+@keyframes shakeComputer {
+    0% {
+        transform: translateY(0px);
+    }
+    15% {
+        transform: translateY(-50px);
+    }
+    25% {
+        transform: translateY(0px);
+    }
+    35% {
+        transform: translateY(-50px);
+    }
+    50% {
+        transform: translateY(0px);
+    }
+    65% {
+        transform: translateY(-50px);
+    }
+    75% {
+        transform: translateY(0px);
+    }
+    85% {
+        transform: translateY(-50px);
+    }
+    100% {
+        transform: translateY(0px);
     }
 }
